--- a/service.yaml
+++ b/service.yaml
@@ -1,14 +1,16 @@
+--- 
 apiVersion: v1
 kind: Service
-metadata:
+metadata: 
+  labels: 
+    app: webapp1
   name: webapp1-svc
-  labels:
+spec: 
+  ports: 
+    - 
+      nodePort: 30080
+      port: 80
+  selector: 
     app: webapp1
-spec:
   type: NodePort
-  ports:
-  - port: 80
-    nodePort: 30080
-  selector:
-    app: webapp1
-	
+
