--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,6 @@ spec:
           image: "nginx:1.7.9"
           name: webapp1
           ports: 
-            - 
-			  containerPort: 80
+          - containerPort: 80
 			
 		
