--- a/service.yaml
+++ b/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata: 
   labels: 
-    app: webapp1
+    app: ngnix
   name: webapp1-svc
 spec: 
   ports: 
@@ -11,6 +11,6 @@ spec:
       nodePort: 30080
       port: 80
   selector: 
-    app: webapp1
+    app: ngnix
   type: NodePort
 
