--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,4 @@
+--- 
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata: 
@@ -14,6 +15,6 @@ spec:
           image: "nginx:1.7.9"
           name: webapp1
           ports: 
-          - containerPort: 80
-			
+            - 
+              containerPort: 80
 		
